# repl

./: .gitignore  AGENTS.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PICKLE_OPTIMIZATION.md  README.md  automate_versioning.sh  benchmark_pickle.sh  find_first_failing_commit.sh  find_first_failing_commit_parallel.sh  force_ci_for_tags.sh  lakefile.lean  lakefile.toml  list_missing_versions.sh  pyproject.toml  rebase_fork.sh  tag_and_push_all.sh  test.sh  update_diffs.sh  update_lean_version.sh  versioning.md
REPL/: Frontend.lean  JSON.lean  Main.lean  Replay.lean  Snapshots.lean
test/: all_tactics-20250622.expected.out  app_type_mismatch2.expected.out  auxiliary_decl.expected.out  calc.expected.out  extract_declaration.expected.out  extract_declaration.lean  file2.expected.out  infotree.expected.out  infotree_theorem.expected.out  line_breaks.expected.out  name_generator.expected.out  pickle_mathlib_performance.expected.out  pickle_mathlib_performance.in  self_proof_apply_check.expected.out  self_proof_rw.expected.out  trace_simp.expected.out
versions/: v4.10.0-rc1.diff  v4.10.0-rc2.diff  v4.10.0.diff  v4.11.0-rc1.diff  v4.11.0-rc2.diff  v4.11.0-rc3.diff  v4.11.0.diff  v4.12.0-rc1.diff  v4.12.0.diff  v4.13.0-rc1.diff  v4.13.0-rc2.diff  v4.13.0-rc3.diff  v4.13.0-rc4.diff  v4.13.0.diff  v4.14.0-rc1.diff  v4.14.0-rc2.diff  v4.14.0-rc3.diff  v4.14.0.diff  v4.15.0-rc1.diff  v4.15.0.diff  v4.16.0-rc1.diff  v4.7.0-rc1.diff  v4.7.0-rc2.diff  v4.7.0.diff  v4.8.0-rc1.diff  v4.8.0-rc2.diff  v4.8.0.diff  v4.9.0-rc1.diff  v4.9.0-rc2.diff  v4.9.0-rc3.diff  (+2 more)
(+23 files in other folders)
