[project]
name = "repl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Auguste Poiroux", email = "augustepoiroux@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pexpect>=4.9.0",
    "psutil>=6.1.0",
    "rich>=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
