[project]
name = "repl"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "pexpect>=4.9.0",
    "psutil>=6.1.0",
    "rich>=13.9.4"
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/repl", "/REPL", "/lake-manifest.json", "/lakefile.toml", "/lean-toolchain", "/REPL.lean"]

[tool.hatch.build.targets.wheel.sources]
"src"                = ""
"REPL"               = "repl/REPL"
"lake-manifest.json" = "repl/lake-manifest.json"
"lakefile.toml"      = "repl/lakefile.toml"
"lean-toolchain"     = "repl/lean-toolchain"
"REPL.lean"          = "repl/REPL.lean"
